# squeeze-alexa

./: .gitignore  .travis.yml  HOWTO.md  Pipfile  README.md  handler.py  lambda.json  mqtt_squeeze.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
docs/: CONTRIBUTING.md  HOWTO.md  MQTT.md  SSL.md  TROUBLESHOOTING.md  squeeze-alexa-networking.xml
docs/example-config/: iot-iam-policy.json  stunnel.conf
etc/: stunnel.conf
etc/certs/: README.md
metadata/: intents.json  intents_v1.json  utterances.txt  utterances_de.txt
metadata/slots/: genres.txt  players.txt  playlists.txt
mqttsqueeze/: __init__.py  main.py
squeezealexa/: __init__.py  gettext.py  i18n.py  main.py  settings.py  speechout.py  ssl_wrap.py  utils.py
squeezealexa/alexa/: __init__.py  handlers.py  intents.py  requests.py  response.py  utterances.py
squeezealexa/squeezebox/: server.py
squeezealexa/transport/: base.py  configured.py  factory.py  mqtt.py  ssl_wrap.py
tests/: __init__.py  alexa_handlers_test.py  fake_ssl.py  genre_test.py  integration_test.py  intents_test.py  lambda_handler_test.py  local_test.py  squeeze_alexa_test.py  test_gettext.py  test_main.py  test_server.py  test_squeezealexa.py  test_ssl_wrap.py  test_utils.py  utils.py
tests/alexa/: alexa_handlers_test.py
tests/data/: bad-hostname.pem  broker-certificate.pem.crt  cert-and-key.pem  cert-only.pem
tests/squeezebox/: __init__.py  test_server.py
tests/transport/: __init__.py  base.py  fake_ssl.py  fake_transport.py  mqtt_integration_test.py  test_base.py  test_mqtt.py  test_ssl.py  (+1 more)
(+15 files in other folders)
